Define JDK version